--- a/package.json
+++ b/package.json
@@ -26,16 +26,14 @@
     "url": "https://github.com/modular-synthesizer/websockets/issues"
   },
   "homepage": "https://github.com/modular-synthesizer/websockets#readme",
-  "devDependencies": {
+  "dependencies": {
+    "dotenv": "^16.3.1",
+    "querystring": "^0.2.1",
     "@types/node": "^20.4.5",
     "@types/ws": "^8.5.5",
     "axios": "^1.4.0",
     "express": "^4.18.2",
     "typescript": "^5.1.6",
-    "ws": "^8.13.0"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1",
-    "querystring": "^0.2.1"
+    "ws": "^8.16.0"
   }
 }
